Replaced numeric constructors with valueOf().